--- a/Content/Site.css
+++ b/Content/Site.css
@@ -1,8 +1,31 @@
-﻿body {
+﻿
+/*
+    at this point i'm not sure which css classes are relevant.
+    i'm sleepy.
+    Check before next push v-3.
+*/
+
+
+body {
     max-width: 100%;
     overflow-x: hidden;
     color: #FFFFFF;
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: sans-serif;
+    /* 
+        fallback for canvas failing. 
+        Yeah, yeah. 
+        I know that !important isn't all that !important. 
+        I'll fix it in the next push.
+    */
+    background-color: #000 !important;
+}
+
+h1, h2 {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+p {
+    font-family: sans-serif;
 }
 
 canvas {
@@ -107,9 +130,38 @@ textarea {
     min-height: 150px;
 }
 
-.v-navbar {
-    margin: 0;
+.v-navbar-tog {
+    position: fixed;
+    top: 15px;
+    right: 15px;
+    z-index: 300;
+    height: 50px;
+}
+
+.v-menu {
+    display: none;
+    position: fixed;
+    background-color: black;
+    opacity: 0.9;
     width: 100%;
+    z-index: 200;
+}
+
+.v-nav-link {
+    color: white;
+    font-size: 2em;
+    letter-spacing: 1px;
+    margin: 0;
+    position: relative;
+    top: 50%;
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+}
+
+.v-navbar {
+    width: 100%;
+    height: 100vh;
+    margin: 0 auto;
 }
 
 .v-nav-shade {
@@ -125,14 +177,16 @@ textarea {
 }
 
 .v-nav-item {
-    width: 25%;
+    width: 100%;
+    height: 20vh;
+    top: 50%;
     text-align: center;
     font-size: 20px;
+    color: white;
 }
 
     .v-nav-item:hover {
         box-shadow: 1px 1px 5px -1px black;
-        border-radius: 60px;
         background-color: rgba(36, 37, 42, 0.2);
     }
 
@@ -145,6 +199,10 @@ textarea {
     border: 1px solid #888888;
 }
 
+/*
+    poor little footer needs some love.
+*/
+
 .v-footer {
     padding: 10px;
     background-color: rgba(34, 49, 63, 0.5);
@@ -156,7 +214,20 @@ textarea {
 }
 
 .vedauritron {
-    background-color: rgba(34, 49, 63, 0.5);
+    background-color: rgba(34, 49, 63, 0.9);
+}
+
+.v-control-icon {
+    background-color: black;
+    color: black;
+    font-size: 20px;
+    width: 100px;
+    height: 100%;
+}
+
+.smalltron {
+    max-width: 75vw;
+    margin: 0 auto;
 }
 
 .fatslim {
@@ -217,6 +288,10 @@ textarea {
         transform: skew(0deg, -30deg);
     }
 
+    /*
+        i cbb to open edge nor ie for testing
+    */
+
 @keyframes move {
     25% {
         opacity: 1;
@@ -265,6 +340,10 @@ textarea {
     .fatslim {
         font-size: 12rem;
     }
+
+    .v-menu {
+        width: 25%;
+    }
 }
 
 @media (max-width: 991px) {
@@ -290,6 +369,15 @@ textarea {
     .v-nav-shade {
         background-color: rgba(34, 49, 63, 1);
     }
+
+    .v-menu {
+        width: 100%;
+    }
+
+    .smalltron {
+        max-width: 100vw;
+        margin: 0 auto;
+    }
 }
 
 @media (max-width: 768px) {
@@ -305,6 +393,11 @@ textarea {
 
     .v-nav-shade {
         background-color: rgba(34, 49, 63, 1);
+    }
+
+    .smalltron {
+        max-width: 100vw;
+        margin: 0 auto;
     }
 }
 
@@ -337,12 +430,29 @@ textarea {
         right: 0;
         height: 100%;
         width: 50%;
-        /*background: #eeeeee;*/
+        /*background: #eeeeee;   I'm sorry. Did you meen yeeeeeet?*/
         background-color: rgba(34, 49, 63, 0.5);
         transform: skew(0deg, -6deg);
         box-shadow: 5px 10px 20px #888888;
     }
 
+    /*
+        not in use, keeping here because of the substantial amount of caca's.
+
+        day 42, caca.
+
+        day 113, i haven't seen signs of intelligent life. I'm still not certain if all of that 
+        text shadow has a negative downside.
+
+        can i be bothered to test it?
+
+        Day 129, looks like caca - am.
+
+        day 182, waiting to see who has courage to delete this with their name
+        on the git push
+
+        day 92932 "who can it be now" *jazz music intensifies* <?php echo "who can it beeeeee now?"?>
+    */
 
 .text-3d {
     color: #ffffff;
