--- a/Views/Home/Software.cshtml
+++ b/Views/Home/Software.cshtml
@@ -82,6 +82,7 @@
         </div>
     </div>
 </div>
+
 <div class="v-section vedauritron">
     <div class="row v-section-content">
         <div class="col-lg-12 text-center">
@@ -93,6 +94,115 @@
                     and make them a reality - virtually and realisticaly.
                 </p>
             </blockquote>
+        </div>
+    </div>
+</div>
+
+<div class="v-section">
+    <div class="row v-section-content">
+        <div class="col-lg-12 text-center">
+            <h1 class="display-3">Projects</h1>
+            <h2 class="v-header">Currently In Development</h2>
+        </div>
+    </div>
+</div>
+
+<div class="v-section vedauritron">
+    <div class="row v-section-content">
+        <div class="col-lg-12 text-center">
+            <h2 class="v-header">903 Business Suite</h2>
+            <blockquote class="blockquote">
+                <p class="mb-0">
+                    <ul style="list-style: none; padding-left: 0px; margin-left: 0px;">
+                        <li>
+                            Employee & Admin Accounts
+                        </li>
+                        <li>
+                            Customizable Data Types
+                        </li>
+                        <li>
+                            Employee & other Transactions
+                        </li>
+                        <li>
+                            Time Entry Management
+                        </li>
+                        <li>
+                            Invoicing and Tracking
+                        </li>
+                        <li>
+                            Inventory Management
+                        </li>
+                        <li>
+                            Order Tracking
+                        </li>
+                        <li>
+                            Job Focused Application
+                        </li>
+                    </ul>
+                </p>
+            </blockquote>
+        </div>
+    </div>
+</div>
+
+<div class="v-section vedauritron">
+    <div class="row v-section-content">
+        <div class="col-lg-12 text-center">
+            <h2 class="v-header">Our Take</h2>
+            <blockquote class="blockquote">
+                <p class="mb-0">
+                    This powerful software can help run the entire show and has room for even more
+                    advanced features in the future.
+                    <br />
+                    <br />
+                    Our client wanted software that's easy to use for managing business processes.
+                    The main focus is job tracking and employee time entries.
+                    <br />
+                    <br />
+                    We automated the job tracking process by coding material and labor charges to be
+                    tacked onto jobs. We also added the ability to create unique types of jobs specific for
+                    their needs and much, much more.
+                </p>
+            </blockquote>
+        </div>
+    </div>
+</div>
+
+<div class="v-section">
+    <div class="row v-section-content">
+        <div class="col-lg-12">
+            <div class="jumbotron-fluid smalltron">
+                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img class="d-block w-100" src="~/img/portfolio/soft/p_suite_01.JPG" alt="FirstSlide" />
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="~/img/portfolio/soft/p_suite_02.JPG" alt="FirstSlide" />
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="~/img/portfolio/soft/p_suite_03.JPG" alt="FirstSlide" />
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="~/img/portfolio/soft/p_suite_05.JPG" alt="FirstSlide" />
+                        </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon v-control-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon v-control-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
+            </div>
         </div>
     </div>
 </div>
