--- a/Views/Home/Website.cshtml
+++ b/Views/Home/Website.cshtml
@@ -111,6 +111,127 @@
     </div>
 </div>
 
+<div class="v-section">
+    <div class="row v-section-content">
+        <div class="col-lg-12 text-center">
+            <h1 class="display-3">Projects</h1>
+            <h2 class="v-header">Currently In Development</h2>
+        </div>
+    </div>
+</div>
+
+<div class="v-section vedauritron">
+    <div class="row v-section-content">
+        <div class="col-lg-12 text-center">
+            <h2 class="v-header">Everlasting Aesthetics</h2>
+            <blockquote class="blockquote">
+                <p class="mb-0">
+                    <ul style="list-style: none; padding-left: 0px; margin-left: 0px;">
+                        <li>
+                            Guest, Member, Nurse and Administrator Accounts
+                        </li>
+                        <li>
+                            Automated Appointment Scheduling
+                        </li>
+                        <li>
+                            Event Management and RSVP
+                        </li>
+                        <li>
+                            Personal Work Schedule
+                        </li>
+                        <li>
+                            Update Content in Real-Time
+                        </li>
+                        <li>
+                            Data Driven Tables
+                        </li>
+                        <li>
+                            Searchable Data
+                        </li>
+                        <li>
+                            Scalable Website Application
+                        </li>
+                    </ul>
+                </p>
+            </blockquote>
+        </div>
+    </div>
+</div>
+
+<div class="v-section vedauritron">
+    <div class="row v-section-content">
+        <div class="col-lg-12 text-center">
+            <h2 class="v-header">Our Take</h2>
+            <blockquote class="blockquote">
+                <p class="mb-0">
+                    This amazing website application helps nurses automatically book appointments, manage their
+                    services, events, accounts and more.
+                    <br />
+                    <br />
+                    Our client wanted a friendly, easy to navigate website application that can replace
+                    multiple applications they already use.
+                    <br />
+                    <br />
+                    We are automating scheduling and newsletters. We're coding solutions to allow managing their listed
+                    services and events straight from their website administrator accounts. This is seriously a powerful
+                    website application that we're proud of.
+                </p>
+            </blockquote>
+        </div>
+    </div>
+</div>
+
+<div class="v-section">
+    <div class="row v-section-content">
+        <div class="col-lg-12">
+            <div class="jumbotron-fluid smalltron">
+                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img class="d-block w-100" src="~/img/portfolio/web/ea_01.JPG" alt="FirstSlide" />
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="~/img/portfolio/web/ea_02.JPG" alt="FirstSlide" />
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="~/img/portfolio/web/ea_03.JPG" alt="FirstSlide" />
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="~/img/portfolio/web/ea_05.JPG" alt="FirstSlide" />
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="~/img/portfolio/web/ea_06.JPG" alt="FirstSlide" />
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="~/img/portfolio/web/ea_07.JPG" alt="FirstSlide" />
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="~/img/portfolio/web/ea_08.JPG" alt="FirstSlide" />
+                        </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon v-control-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon v-control-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 <div class="v-section vedauritron">
     <div class="row v-section-content">
         <div class="col-lg-12 text-center">
