--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="The Vedauri team develops websites, desktop software applications, phone application apps and video games. Based in Tyler Texas." />
     <title>@ViewBag.Title - Vedauri</title>
     <link rel="icon" href="~/img/v-min.png" type="image/x-icon" />
     @Styles.Render("~/bundles/css")
@@ -10,30 +11,33 @@
 </head>
 <body>
 
-    <nav class="navbar navbar-expand-lg fixed-top navbar-dark v-nav-shade">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav v-navbar">
-                <li class="nav-item v-nav-item">
-                    @Html.ActionLink("Home", "Index", "Home", null, new { @class = "nav-link" })
-                </li>
-                <li class="nav-item v-nav-item">
-                    @Html.ActionLink("Website", "Website", "Home", null, new { @class = "nav-link" })
-                </li>
-                <li class="nav-item v-nav-item">
-                    @Html.ActionLink("Software", "Software", "Home", null, new { @class = "nav-link" })
-                </li>
-                <li class="nav-item v-nav-item">
-                    @Html.ActionLink("About", "About", "Home", null, new { @class = "nav-link" })
-                </li>
-                <li class="nav-item v-nav-item">
-                    @Html.ActionLink("Contact", "Contact", "Home", null, new { @class = "nav-link" })
-                </li>
-            </ul>
+    <button id="btnTogMenu" class="v-navbar-tog btn btn-outline-light" type="button">
+        Menu
+    </button>
+
+    <div id="menu" class="v-section v-menu">
+        <div class="row v-section-content">
+            <div class="col-lg-12 text-center">
+                <ul class="navbar-nav v-navbar">
+                    <li class="nav-item v-nav-item">
+                        @Html.ActionLink("Home", "Index", "Home", null, new { @class = "nav-link v-nav-link" })
+                    </li>
+                    <li class="nav-item v-nav-item">
+                        @Html.ActionLink("Website", "Website", "Home", null, new { @class = "nav-link v-nav-link" })
+                    </li>
+                    <li class="nav-item v-nav-item">
+                        @Html.ActionLink("Software", "Software", "Home", null, new { @class = "nav-link v-nav-link" })
+                    </li>
+                    <li class="nav-item v-nav-item">
+                        @Html.ActionLink("About", "About", "Home", null, new { @class = "nav-link v-nav-link" })
+                    </li>
+                    <li class="nav-item v-nav-item">
+                        @Html.ActionLink("Contact", "Contact", "Home", null, new { @class = "nav-link v-nav-link" })
+                    </li>
+                </ul>
+            </div>
         </div>
-    </nav>
+    </div>
 
     <div id="dvMain" class="container-fluid body-content">
         @RenderBody()
@@ -49,14 +53,32 @@
     @Scripts.Render("~/bundles/script")
     @RenderSection("scripts", required: false)
 
-<script src="~/Scripts/Main.js"></script>
-<script type="module" src="~/Scripts/MainThree.js"></script>
+    <script src="~/Scripts/Main.js"></script>
+    <script type="module" src="~/Scripts/MainThree.js"></script>
 
     <script type="text/javascript">
+
+        var menuToggled = false;
+
         $(document).ready(function () {
             console.log(location.pathname);
             $('a[href$="' + location.pathname + '"]').addClass('active');
+            $("#menu").hide();
         });
+
+        $("#btnTogMenu").click(() => Menu());
+
+        function Menu() {
+
+            menuToggled = !menuToggled;
+
+            if (menuToggled) {
+                $("#menu").fadeIn();
+            } else {
+                $("#menu").fadeOut();
+            }
+
+        }
     </script>
 
 </body>
